reports/2_python.log
Traceback (most recent call last):
  File "/home/fausto/anaconda3/envs/pLoT/lib/python3.10/site-packages/jupyter_cache/executors/utils.py", line 51, in single_nb_execution
    executenb(
  File "/home/fausto/anaconda3/envs/pLoT/lib/python3.10/site-packages/nbclient/client.py", line 1204, in execute
    return NotebookClient(nb=nb, resources=resources, km=km, **kwargs).execute()
  File "/home/fausto/anaconda3/envs/pLoT/lib/python3.10/site-packages/nbclient/util.py", line 84, in wrapped
    return just_run(coro(*args, **kwargs))
  File "/home/fausto/anaconda3/envs/pLoT/lib/python3.10/site-packages/nbclient/util.py", line 62, in just_run
    return loop.run_until_complete(coro)
  File "/home/fausto/anaconda3/envs/pLoT/lib/python3.10/asyncio/base_events.py", line 641, in run_until_complete
    return future.result()
  File "/home/fausto/anaconda3/envs/pLoT/lib/python3.10/site-packages/nbclient/client.py", line 663, in async_execute
    await self.async_execute_cell(
  File "/home/fausto/anaconda3/envs/pLoT/lib/python3.10/site-packages/nbclient/client.py", line 965, in async_execute_cell
    await self._check_raise_for_error(cell, cell_index, exec_reply)
  File "/home/fausto/anaconda3/envs/pLoT/lib/python3.10/site-packages/nbclient/client.py", line 862, in _check_raise_for_error
    raise CellExecutionError.from_cell_and_msg(cell, exec_reply_content)
nbclient.exceptions.CellExecutionError: An error occurred while executing the following cell:
------------------
for i in range(3):
print(i, end='')
------------------

[0;36m  Input [0;32mIn [2][0;36m[0m
[0;31m    print(i, end='')[0m
[0m    ^[0m
[0;31mIndentationError[0m[0;31m:[0m expected an indented block after 'for' statement on line 1

IndentationError: expected an indented block after 'for' statement on line 1 (3243958857.py, line 2)

